ADD new details view + new dashboard features

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -62,5 +62,6 @@
   </section>
 
   <bae-off-gallery></bae-off-gallery>
-  <bae-off-featured></bae-off-featured>
+  <app-platform-benefits></app-platform-benefits>
+
 </div>
