--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -1,7 +1,7 @@
 
 <div class="pr-8 pl-8 pb-8 pt-2">
     <!-- Breadcrumb -->
-    <div class="pb-2">
+    <div class="pb-4">
         <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
             <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
             <li class="inline-flex items-center">
@@ -24,30 +24,60 @@
         </nav>
     </div>
   <!-- End Breadcrumb -->
-    <div class="w-full h-full bg-secondary-50 rounded-lg dark:bg-white dark:border-gray-700 border-secondary-50 border">
-        <a href="#" class="flex justify-center w-full h-[200px] box-decoration-clone">
-        <img class=" rounded-t-lg w-fit h-[200px]" src="{{getProductImage()}}" alt="product image" />
-        </a>
-        <div class="dark:bg-white bg-cover bg-right-bottom bg-opacity-25" style="background-image: url(assets/logos/dome-logo-element-colour.png)">
-            <div class="px-5 py-5 bg-secondary-50/95 dark:bg-white/95 grid grid-cols-2">
-                <div>
-                    @for (cat of categories; track cat.id) {
-                    <bae-badge class="ml-2" [category]=cat></bae-badge>
-                    }
-                    <a href="#">
-                    <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{productOff?.name}}</h5>
-                    </a>
-                </div>
-                <div class="flex justify-end align-middle">
-                    <div class="flex place-content-start items-baseline mb-5">
-                    <span class="text-2xl font-bold text-gray-900 mr-1">{{ 'CARD._from' | translate }} {{getPrice().price}} {{getPrice().unit}}</span>
-                    <span class="text-xs font-bold text-gray-900">{{getPrice().text}}</span>
-                    </div>
+
+    <!-- START HEADER CARD -->
+    <div class="w-full h-[320px] mb-4 bg-secondary-50 rounded-lg dark:bg-white dark:border-gray-700 border-secondary-50 border grid grid-cols-60/40">
+
+        <div class="grid grid-rows-5 p-4 md:p-8 h-[320px]">
+            <div class="mt-2">
+                <a href="#">
+                <h5 class="md:text-3xl lg:text-4xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{productOff?.name}}</h5>
+                </a>
+            </div>
+            <div class="pt-2 line-clamp-2 dark:text-gray-600">{{productOff?.description}}</div>
+            <div class="grid grid-cols-2">
+                <div class="min-h-19 pt-2 dark:text-gray-600">V: {{productOff?.version || 'latest'}}</div>
+                <div class="flex items-center justify-end">
+                    <svg class="w-4 h-4 text-yellow-300 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+                      <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-300 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+                      <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-300 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+                      <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-300 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+                      <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+                    </svg>
+                    <svg class="w-4 h-4 text-gray-200 dark:text-gray-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+                      <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+                    </svg>
+                    <span class="bg-blue-100 text-blue-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ml-3">5.0</span>
                 </div>
             </div>
+            <div>
+                <div class="flex place-content-start items-baseline mb-5">
+                <span class="text-2xl font-bold text-gray-900 mr-1">{{ 'CARD._from' | translate }} {{getPrice().price}} {{getPrice().unit}}</span>
+                <span class="text-xs font-bold text-gray-900">{{getPrice().text}}</span>
+                </div>
+
+            </div>
+            <div>
+                @for (cat of categories; track cat.id) {
+                    <bae-badge class="mr-2" [category]=cat></bae-badge>
+                }
+            </div>
         </div>
-        <div class="w-full bg-secondary-50/95 dark:bg-white/95">
-            <ul class="hidden text-sm font-medium text-center text-gray-500 rounded-lg sm:flex dark:text-gray-400" id="detailsTab" data-tabs-toggle="#detailsTabContent" role="tablist">
+        <div class="h-[320px]">
+            <img class="rounded-r-lg w-full h-[318px]" src="{{getProductImage()}}" alt="product image" />
+        </div>
+    </div>
+<!-- END HEADER CARD -->
+  
+    <div class="w-full h-full bg-secondary-50 rounded-lg dark:bg-white dark:border-gray-700 border-secondary-50 border">
+        <div class="w-full bg-secondary-50/95 dark:bg-white/95 rounded-lg">
+            <ul class="hidden text-base font-medium text-center text-gray-500 rounded-lg sm:flex dark:text-gray-400" id="detailsTab" data-tabs-toggle="#detailsTabContent" role="tablist">
                 <li class="w-full">
                     <button id="info-tab" data-tabs-target="#info" type="button" role="tab" aria-controls="info" aria-selected="true" class="w-full inline-block p-4 text-blue-600 dark:text-blue-500">{{ 'PRODUCT_DETAILS._details' | translate }}</button>
                 </li>
@@ -64,34 +94,40 @@
                     <button id="relationships-tab" data-tabs-target="#relationships" type="button" role="tab" aria-controls="relationships" aria-selected="false" class="w-full inline-block p-4 hover:text-gray-600 dark:hover:text-gray-300">{{ 'PRODUCT_DETAILS._relationships' | translate }}</button>
                 </li>
             </ul>
-            <div id="fullWidthTabContent" class="border-t border-gray-300 bg-secondary-50/95 dark:bg-white/95">
-                <div class="hidden p-4 md:p-8" id="info" role="tabpanel" aria-labelledby="info-tab">
-                    <div class="min-h-19 dark:text-gray-600">{{productOff?.description}}</div>
-                    <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'CARD._comp_profile' | translate }}:</h5>
-                    <ul class="max-w-md space-y-1 list-disc list-inside dark:text-gray-600">
-                      @for (char of complianceProf; track char.id) {
-                        @if (char.href == '#') {
-                            <li>{{char.name}}: {{char.value}}</li>
-                        } @else {
-                            <li>{{char.name}}: <a href="{{char.href}}">{{char.value}}</a></li>
-                        }
-                      }
-                    </ul>
-                    <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'CARD._extra_info' | translate }}:</h5>
-                    <div class="grid grid-cols-2 gap-4">
-                      <ul class="max-w-md space-y-1 list-disc list-inside dark:text-gray-600">
-                        <li>{{ 'CARD._offer_version' | translate }}: v{{productOff?.version}}</li>
-                        <li>{{ 'CARD._product_name' | translate }}: {{prodSpec.name}}</li>
-                        <li>{{ 'CARD._brand' | translate }}: {{prodSpec.brand}}</li>
-                      </ul>
-                      <ul class="max-w-md space-y-1 list-disc list-inside dark:text-gray-600">
-                        <li>{{ 'CARD._last_update' | translate }}: {{productOff?.lastUpdate | date:'dd/MM/yy, HH:mm'}}</li>
-                        <li>{{ 'CARD._product_version' | translate }}: v{{prodSpec.version}}</li>
-                        <li>{{ 'CARD._id_number' | translate }}: XX</li>
-                      </ul>
+            <div id="fullWidthTabContent" class="border-t border-gray-300 bg-secondary-50/95 dark:bg-white/95 rounded-lg">
+                <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4 grid grid-cols-2 gap-14" id="info" role="tabpanel" aria-labelledby="info-tab">
+                    <div>
+                        <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'CARD._full_desc' | translate }}:</h5>
+                        <div class="min-h-19 dark:text-gray-600">{{productOff?.description}}</div>
+                        <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'CARD._comp_profile' | translate }}:</h5>
+                        <ul class="max-w-md space-y-1 list-disc list-inside dark:text-gray-600">
+                          @for (char of complianceProf; track char.id) {
+                            @if (char.href == '#') {
+                                <li>{{char.name}}: {{char.value}}</li>
+                            } @else {
+                                <li>{{char.name}}: <a href="{{char.href}}">{{char.value}}</a></li>
+                            }
+                          }
+                        </ul>
                     </div>
+                    <div>
+                        <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'CARD._extra_info' | translate }}:</h5>
+                        <div class="grid grid-cols-2 gap-4">
+                          <ul class="max-w-md space-y-1 list-disc list-inside dark:text-gray-600">
+                            <li>{{ 'CARD._offer_version' | translate }}: v{{productOff?.version}}</li>
+                            <li>{{ 'CARD._product_name' | translate }}: {{prodSpec.name}}</li>
+                            <li>{{ 'CARD._brand' | translate }}: {{prodSpec.brand}}</li>
+                          </ul>
+                          <ul class="max-w-md space-y-1 list-disc list-inside dark:text-gray-600">
+                            <li>{{ 'CARD._last_update' | translate }}: {{productOff?.lastUpdate | date:'dd/MM/yy, HH:mm'}}</li>
+                            <li>{{ 'CARD._product_version' | translate }}: v{{prodSpec.version}}</li>
+                            <li>{{ 'CARD._id_number' | translate }}: XX</li>
+                          </ul>
+                        </div>
+                    </div>                   
+
                 </div>
-                <div class="hidden p-4 md:p-8 w-full" id="chars" role="tabpanel" aria-labelledby="chars-tab">
+                <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4 w-full" id="chars" role="tabpanel" aria-labelledby="chars-tab">
                     @for (char of prodSpec.productSpecCharacteristic; track char.id) {
                         <div class="min-h-19 pb-2">
                             <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{char.name}}:</h5>
@@ -99,12 +135,12 @@
                                 @if (val?.isDefault == true) {
                                     <div class="flex items-center">
                                         <input disabled checked id="disabled-checked-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-full focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                                        <label for="disabled-checked-checkbox" class="ms-2 text-sm font-medium text-gray-400 dark:text-gray-500">{{val.value}}</label>
+                                        <label for="disabled-checked-checkbox" class="ms-2 text-sm font-medium dark:text-gray-600">{{val.value}}</label>
                                     </div>
                                 } @else {
                                     <div class="flex items-center">
                                         <input disabled id="disabled-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-full focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                                        <label for="disabled-checkbox" class="ms-2 text-sm font-medium text-gray-400 dark:text-gray-500">{{val.value}}</label>
+                                        <label for="disabled-checkbox" class="ms-2 text-sm font-medium dark:text-gray-600">{{val.value}}</label>
                                     </div>
                                 }
                             }
@@ -113,10 +149,10 @@
                         <div class="min-h-19 dark:text-gray-600 text-center">{{ 'PRODUCT_DETAILS._no_chars' | translate }}.</div>
                     }                    
                 </div>
-                <div class="hidden p-4 md:p-8 " id="attachments" role="tabpanel" aria-labelledby="attachments-tab">
+                <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="attachments" role="tabpanel" aria-labelledby="attachments-tab">
                     <div class="min-h-19 dark:text-gray-600 text-center">{{ 'PRODUCT_DETAILS._no_attach' | translate }}.</div>
                 </div>
-                <div class="hidden p-4 md:p-8 " id="agreements" role="tabpanel" aria-labelledby="agreements-tab">
+                <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="agreements" role="tabpanel" aria-labelledby="agreements-tab">
                     <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'PRODUCT_DETAILS._license' | translate }}:</h5>
                     <p class="mb-2 font-normal text-gray-700">{{productOff?.productOfferingTerm?.at(0)?.name}}</p>
                     <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'PRODUCT_DETAILS._sla' | translate }}:</h5>
@@ -153,7 +189,7 @@
                     }
                 </div>
                 </div>
-                <div class="hidden p-4 md:p-8 " id="relationships" role="tabpanel" aria-labelledby="relationships-tab">
+                <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="relationships" role="tabpanel" aria-labelledby="relationships-tab">
                     <div class="min-h-19 dark:text-gray-600 text-center">{{ 'PRODUCT_DETAILS._no_relatioships' | translate }}.</div>
                 </div>
             </div>
