--- a/src/app/offerings/gallery/gallery.component.html
+++ b/src/app/offerings/gallery/gallery.component.html
@@ -3,8 +3,22 @@
 <div class="pt-8 pb-2 px-4 mx-auto max-w-screen-xl lg:pt-16 w-full grid gap-2 grid-cols-1 place-items-center sm:grid-cols-2 lg:grid-cols-4">
   @for (prod of products; track prod.id) {
     <bae-off-card [productOff]=prod class="w-full"></bae-off-card>
+  } @empty {
   }
 </div>
+@if (products.length === 0){
+  <div class="flex justify-center w-full">
+    <div class="flex items-center p-4 mb-4 text-sm text-primary-100 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-primary-50" role="alert">
+      <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+        <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+      </svg>
+      <span class="sr-only">Info</span>
+      <div>
+        {{ 'GALLERY._no_products' | translate }}
+      </div>
+    </div>
+  </div>
+}
 <div class="flex justify-center pb-8 lg:pb-16">
   <button  type="button" class="m-4 p-2 w-fit flex items-center justify-start text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
     <svg class="rtl:rotate-180 w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -18,5 +32,5 @@
     </svg>
     {{ 'GALLERY._add_your_service' | translate }}
   </button>
-</div> 
+</div>
 <!-- End Offerings Section -->
