UPDATE landing page + ADD integration with cart api

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -94,7 +94,7 @@
                     <button id="relationships-tab" data-tabs-target="#relationships" type="button" role="tab" aria-controls="relationships" aria-selected="false" class="w-full inline-block p-4 hover:text-gray-600 dark:hover:text-gray-300">{{ 'PRODUCT_DETAILS._relationships' | translate }}</button>
                 </li>
             </ul>
-            <div id="fullWidthTabContent" class="border-t border-gray-300 bg-secondary-50/95 dark:bg-white/95 rounded-lg">
+            <div id="detailsTabContent" class="border-t border-gray-300 bg-secondary-50/95 dark:bg-white/95 rounded-lg">
                 <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4 grid grid-cols-2 gap-14" id="info" role="tabpanel" aria-labelledby="info-tab">
                     <div>
                         <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'CARD._full_desc' | translate }}:</h5>
