ADD new tabs on add-cart modal + cart form + fixes

--- a/src/app/shared/cart-drawer/cart-drawer.component.html
+++ b/src/app/shared/cart-drawer/cart-drawer.component.html
@@ -65,9 +65,10 @@
          </div>
    </div>  
    
-   <div class="mt-2">
-      <a href="#" class="inline-flex w-full items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">{{ 'CART_DRAWER._purchase' | translate }} <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-  </svg></a>
-   </div>
+   <button (click)="goToShoppingCart();"  type="button" class="mt-2 w-full flex items-center justify-start text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+      <svg class="rtl:rotate-180 w-3.5 h-3.5 mr-2 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+      </svg>
+      {{ 'CART_DRAWER._purchase' | translate }}
+    </button>
 </div>
