--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -60,7 +60,7 @@
 
 <!-- Main modal -->
 @if (showModal){
-  <div id="details-modal" [ngClass]="showModal ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full rounded-lg">
+  <div id="details-modal" [ngClass]="showModal ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full rounded-lg shadow-2xl">
     <div class="relative w-full max-w-7xl max-h-full rounded-t-lg">
         <!-- Modal content -->
         <div class="relative bg-white rounded-lg shadow dark:border-gray-600 dark:bg-secondary-100 bg-cover bg-right-bottom rounded-lg" (click)="$event.stopPropagation();">
@@ -201,7 +201,7 @@
 
 <!-- CART SELECTION modal -->
 @if (cartSelection){
-  <div id="cart-selection-modal" [ngClass]="cartSelection ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+  <div id="cart-selection-modal" [ngClass]="cartSelection ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full shadow-2xl">
     <div class="relative w-full max-w-7xl max-h-full">
         <!-- Modal content -->
         <div class="relative bg-white rounded-lg shadow dark:border-gray-600 dark:bg-secondary-100 bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
@@ -216,15 +216,34 @@
             </div>
             <!-- Modal body -->
             <div class="w-full h-full p-8">
+              <div class="flex">
                 @if(check_prices){
-                  <div class="pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="price" role="tabpanel" aria-labelledby="price-tab">
-                      <h5 class="text-3xl font-semibold tracking-tight text-primary-100 dark:text-primary-50">Selecciona precio:</h5>
+                  <button type="button-price" (click)="clickShowPrice()" class="h-fit ml-4 w-fit text-primary-100 dark:text-white rounded-lg text-lg px-5 py-2.5 text-center inline-flex items-center">
+                    Price plans
+                  </button>
+                }
+                @if(check_char){
+                  <button type="button-char" (click)="clickShowChar()" class="h-fit w-fit ml-4 text-primary-100 dark:text-white rounded-lg text-lg px-5 py-2.5 text-center inline-flex items-center">
+                    Characteristics
+                  </button>
+                }
+                @if(check_terms){
+                  <button type="button-terms" (click)="clickShowTerms()" class="h-fit w-fit ml-4 text-primary-100 dark:text-white rounded-lg text-lg px-5 py-2.5 text-center inline-flex items-center">
+                    Terms
+                  </button>
+                  }
+              </div>
+              <hr class="h-px ml-4 mr-4 mb-2 bg-gray-300 border-0">
+              <div class="border border-gray-300 bg-secondary-50/95 rounded-lg">
+                @if(check_prices){
+                  <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="price">
+                      <h5 class="text-3xl font-semibold tracking-tight text-primary-100 ">Select price plan:</h5>
                       <div class="grid grid-flow-col gap-8 p-4">
                       @for (price of productOff?.productOfferingPrice; track price.id; let idx = $index) {
                         @if (price.priceType == 'recurring') {
                           <div class="flex items-center">
-                            <input checked [id]="'price-radio-'+idx" (change)="onPriceChange(price)" type="radio" value="" name="price-radio" class="hidden peer w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                            <label [for]="'price-radio-'+idx" class="inline-flex items-center justify-center w-full p-5 border border-gray-200 rounded-lg cursor-pointer dark:border-gray-700 dark:peer-checked:border-primary-50 peer-checked:border-primary-100">
+                            <input checked [id]="'price-radio-'+idx" (change)="onPriceChange(price)" type="radio" value="" name="price-radio" class="hidden peer w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 ">
+                            <label [for]="'price-radio-'+idx" class="inline-flex items-center justify-center w-full p-5 peer-checked:border  rounded-lg cursor-pointer peer-checked:border-primary-100">
                               
                               <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
                                 <div class="bg-green-500 rounded-t-lg w-full">
@@ -240,8 +259,8 @@
  
                         } @else if (price.priceType == 'usage') {
                           <div class="flex items-center">
-                            <input checked [id]="'price-radio-'+idx" (change)="onPriceChange(price)" type="radio" value="" name="price-radio" class="hidden peer items-center w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                            <label [for]="'price-radio-'+idx" class="inline-flex items-center justify-center w-full p-5 border border-gray-200 rounded-lg cursor-pointer dark:border-gray-700 dark:peer-checked:border-primary-50 peer-checked:border-primary-100">
+                            <input checked [id]="'price-radio-'+idx" (change)="onPriceChange(price)" type="radio" value="" name="price-radio" class="hidden peer items-center w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                            <label [for]="'price-radio-'+idx" class="inline-flex items-center justify-center w-full p-5 peer-checked:border  rounded-lg cursor-pointer peer-checked:border-primary-100">
 
                               <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full">
                                   <div class="bg-yellow-300 rounded-t-lg w-full">
@@ -255,8 +274,8 @@
                           </div>
                         } @else {
                           <div class="flex items-center">
-                            <input checked [id]="'price-radio-'+idx" (change)="onPriceChange(price)" type="radio" value="" name="price-radio" class="hidden peer w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                            <label [for]="'price-radio-'+idx" class="inline-flex items-center justify-center w-full p-5 border border-gray-200 rounded-lg cursor-pointer dark:border-gray-700 dark:peer-checked:border-primary-50 peer-checked:border-primary-100">
+                            <input checked [id]="'price-radio-'+idx" (change)="onPriceChange(price)" type="radio" value="" name="price-radio" class="hidden peer w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                            <label [for]="'price-radio-'+idx" class="inline-flex items-center justify-center w-full p-5 peer-checked:border rounded-lg cursor-pointer peer-checked:border-primary-100">
 
                             <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow w-full justify-center">
                                 <div class="bg-blue-500 rounded-t-lg w-full">
@@ -273,23 +292,23 @@
                   </div>
                   }                
                   @if(check_char){
-                    <div class="pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="char" role="tabpanel" aria-labelledby="char-tab">
-                      <h5 class="text-3xl font-semibold tracking-tight text-primary-100 dark:text-primary-50">Selecciona características:</h5>
+                    <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="char">
+                      <h5 class="text-3xl font-semibold tracking-tight text-primary-100">Select characteristics:</h5>
   
                       @for(char of prodSpec.productSpecCharacteristic; track char.id; let charidx = $index){
                         <div class="min-h-19 pb-2">
-                          <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{char.name}}:</h5>
+                          <h5 class="text-xl font-semibold tracking-tight text-primary-100">{{char.name}}:</h5>
                           @for (val of char?.productSpecCharacteristicValue; track val.value; let validx = $index) {
                             <div class="flex">
                             @if (val?.isDefault == true) {
                             <div class="flex items-center mb-4">
-                              <input checked [id]="'char-radio-'+charidx+validx" (change)="onCharChange(charidx,validx,val)" type="radio" value="" [name]="'char-radio-'+charidx" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                              <label [for]="'char-radio-'+charidx+validx" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">{{val.value}}</label>
+                              <input checked [id]="'char-radio-'+charidx+validx" (change)="onCharChange(charidx,validx,val)" type="radio" value="" [name]="'char-radio-'+charidx" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                              <label [for]="'char-radio-'+charidx+validx" class="ms-2 text-sm font-medium text-gray-900">{{val.value}}</label>
                             </div>
                             } @else {
                               <div class="flex items-center mb-4">
-                                <input [id]="'char-radio-'+charidx+validx" (change)="onCharChange(charidx,validx,val)" type="radio" value="" [name]="'char-radio-'+charidx" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                                <label [for]="'char-radio-'+charidx+validx" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">{{val.value}}</label>
+                                <input [id]="'char-radio-'+charidx+validx" (change)="onCharChange(charidx,validx,val)" type="radio" value="" [name]="'char-radio-'+charidx" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                                <label [for]="'char-radio-'+charidx+validx" class="ms-2 text-sm font-medium text-gray-900">{{val.value}}</label>
                               </div>
                             }
                           </div>
@@ -299,17 +318,18 @@
                     </div>
                     }
                     @if(check_terms){
-                      <div class="pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="terms" role="tabpanel" aria-labelledby="terms-tab">
-                        <h5 class="text-3xl font-semibold tracking-tight text-primary-100 dark:text-primary-50">Terms and conditions:</h5>
+                      <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="terms">
+                        <h5 class="text-3xl font-semibold tracking-tight text-primary-100">Terms and conditions:</h5>
                         @for (term of productOff?.productOfferingTerm; track term.name){
-                          <p class="text-gray-900 dark:text-gray-300">{{term.name}}: {{term.description}}</p>
+                          <p class="text-gray-900">{{term.name}}: {{term.description}}</p>
                         }
                         <div class="flex items-center mb-4">
-                          <input id="terms-checkbox" type="checkbox" (change)="selected_terms=!selected_terms" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                          <label for="terms-checkbox" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">He leído y acepto los términos y condiciones</label>
+                          <input id="terms-checkbox" type="checkbox" (change)="selected_terms=!selected_terms" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
+                          <label for="terms-checkbox" class="ms-2 text-sm font-medium text-gray-900">I have read and I accept the terms and conditions.</label>
                       </div>
                       </div>
-                    }             
+                    }
+                  </div>       
                     @if(check_terms == true && selected_terms == false){
                       <button disabled (click)="addProductToCart(productOff,true)" type="button" class="cursor-not-allowed mt-2 w-full flex items-center justify-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                         <svg class="w-3.5 h-3.5 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
